...
                                            BorderRadius.circular(24.0),
                                        child: Image.network(
                                          key: ValueKey('Image_j0xf'),
                                          currentUserPhoto,
                                          width: 120.0,
...
                                    0.0, 10.0, 0.0, 0.0),
                                child: Text(
                                  key: ValueKey('Username_s9n4'),
                                  valueOrDefault<String>(
                                    listViewUsersRecord?.displayName,
...
                                    0.0, 10.0, 0.0, 0.0),
                                child: Text(
                                  key: ValueKey('Email_4po9'),
                                  valueOrDefault<String>(
                                    listViewUsersRecord?.email,
...
                                ),
                                child: Row(
                                  key: ValueKey('Row_6juz'),
                                  mainAxisSize: MainAxisSize.max,
                                  mainAxisAlignment:
...
                                ),
                                child: Row(
                                  key: ValueKey('Row_xsyz'),
                                  mainAxisSize: MainAxisSize.max,
                                  mainAxisAlignment:
...
                                decoration: BoxDecoration(),
                                child: Row(
                                  key: ValueKey('Row_fz3j'),
                                  mainAxisSize: MainAxisSize.max,
                                  mainAxisAlignment:
...
                                decoration: BoxDecoration(),
                                child: Row(
                                  key: ValueKey('Row_lx11'),
                                  mainAxisSize: MainAxisSize.max,
                                  mainAxisAlignment:
...
                                      alignment: AlignmentDirectional(1.0, 0.0),
                                      child: Switch.adaptive(
                                        key: ValueKey('Switch_en6p'),
                                        value: _model.switchValue ??=
                                            listViewUsersRecord!.isSecurity,
...
                                    0.0, 15.0, 0.0, 5.0),
                                child: Text(
                                  key: ValueKey('CarsRegistered_zi57'),
                                  'Registered cars',
                                  style: FlutterFlowTheme.of(context)
...

                                  return ListView.builder(
                                    key: ValueKey('ListView_d389'),
                                    padding: EdgeInsets.zero,
                                    primary: false,
...
                                          ),
                                          FlutterFlowIconButton(
                                            key: ValueKey('IconButton_o3ta'),
                                            borderRadius: 8.0,
                                            buttonSize: 40.0,
...
                                  width: MediaQuery.sizeOf(context).width * 1.0,
                                  child: TextFormField(
                                    key: ValueKey('NewCarPlate_28n2'),
                                    controller:
                                        _model.newCarPlateTextController,
...
                        children: [
                          FFButtonWidget(
                            key: ValueKey('Button_a7gg'),
                            onPressed: () async {
                              context.pushNamed(EditProfileWidget.routeName);
...
                          ),
                          FFButtonWidget(
                            key: ValueKey('Button_1ddl'),
                            onPressed: () async {
                              GoRouter.of(context).prepareAuthEvent();
...
