...
              ),
              if (valueOrDefault<bool>(currentUserDocument?.isSecurity, false))
                Align(
                  alignment: AlignmentDirectional(0.88, 0.92),
                  child: AuthUserStreamWidget(
                    builder: (context) => FlutterFlowIconButton(
                      key: ValueKey('IconButton_gv90'),
                      borderRadius: 100.0,
                      buttonSize: MediaQuery.sizeOf(context).width * 0.16,
                      fillColor: FlutterFlowTheme.of(context).primary,
                      icon: Icon(
                        Icons.send,
                        color: FlutterFlowTheme.of(context).info,
...
